<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".LoginActivity">


    <View
        android:id="@+id/view"

        android:layout_width="300dp"
        android:layout_height="450dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="50dp"
        android:alpha="0.50"
        android:background="@drawable/shape_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="40dp"
        android:text="@string/acesse_sua_conta"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#d3626e"
        android:textDirection="ltr"
        android:backgroundTint="#d3626e"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.032" />

    <EditText
        android:id="@+id/et_senha"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="Senha"
        android:textColorHint="#d3626e"
        android:backgroundTint="#d3626e"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bt_confirma_cadastro_sombra"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.8"
        android:background="@drawable/shape_button"
        android:clickable="false"
        android:backgroundTint="@color/colorAccent"
        android:backgroundTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/et_senha"
        app:layout_constraintVertical_bias="0.225" />

    <Button
        android:id="@+id/bt_confirma_cadastro"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_button"
        android:text="@string/entrar"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/et_senha"
        app:layout_constraintVertical_bias="0.155" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="Ainda não possui uma conta?"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#d3626e"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/bt_confirma_cadastro"
        app:layout_constraintVertical_bias="0.183" />


    <Button
        android:id="@+id/bt_cadastro_sombra"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="115dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.8"
        android:clickable="false"
        android:background="@drawable/shape_button"
        android:backgroundTint="@color/colorAccent"
        android:backgroundTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/et_senha"
        app:layout_constraintVertical_bias="0.444" />

    <Button
        android:id="@+id/bt_cadastro"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_button"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/et_senha"
        app:layout_constraintVertical_bias="0.354" />

    <TextView
        android:id="@+id/tv_aviso"
        android:layout_width="252dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text=" "
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#d3626e"
        android:textStyle="italic"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/bt_confirma_cadastro_sombra"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/et_senha" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="145dp"
        android:layout_height="124dp"
        android:layout_marginTop="8dp"
        android:cropToPadding="true"
        android:padding="1dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/barack_logo" />

</android.support.constraint.ConstraintLayout>