<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroActivity"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="40dp"
        android:text="Cadastro:"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181" />

    <View
        android:id="@+id/view"

        android:layout_width="300dp"
        android:layout_height="428dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="50dp"
        android:alpha="0.50"
        android:background="@drawable/shape_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView

        android:id="@+id/scrollView2"
        android:layout_width="295dp"
        android:layout_height="242dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="8dp"
        android:alpha="100"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_nome"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:backgroundTint="#d3626e"
                android:ems="10"
                android:hint="@string/nome"
                android:inputType="textPersonName"
                android:textColorHint="#d3626e" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:backgroundTint="#d3626e"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="#d3626e" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/et_senha"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:backgroundTint="#d3626e"
                android:ems="10"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:textColorHint="#d3626e" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/et_confirma_senha"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:backgroundTint="#d3626e"
                android:ems="10"
                android:hint="@string/confirmar_senha"
                android:inputType="textPassword"
                android:textColorHint="#d3626e" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Spinner
                android:id="@+id/sp_curso"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:backgroundTint="#d3626e" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Spinner
                android:id="@+id/sp_serie"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:backgroundTint="#d3626e" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/bt_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/ic_next_white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
        </LinearLayout>
    </ScrollView>


    <ImageView
        android:id="@+id/iv_perfil"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_circle"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/iv_dog_perfil"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/ic_dog_perfil"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/iv_perfil"
        app:layout_constraintEnd_toEndOf="@+id/iv_perfil"
        app:layout_constraintStart_toStartOf="@+id/iv_perfil"
        app:layout_constraintTop_toTopOf="@+id/iv_perfil" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/bt_perfil"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="5dp"
        android:src="@drawable/ic_camera_white"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.651"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.773"
        app:maxImageSize="20dp" />

    <TextView
        android:id="@+id/tv_aviso"
        android:layout_width="252dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#d3626e"
        android:textStyle="italic"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/iv_dog_perfil" />

</android.support.constraint.ConstraintLayout>